--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -10,6 +10,7 @@ members = [
     "crates/nym-gateway-probe",
     "crates/nym-harbour-master-client",
     "crates/nym-ip-packet-client",
+    "crates/nym-mixnet-client",
     "crates/nym-routing",
     "crates/nym-vpn-account-controller",
     "crates/nym-vpn-api-client",
