--- a/nym-vpn-core/crates/nym-authenticator-client/Cargo.toml
+++ b/nym-vpn-core/crates/nym-authenticator-client/Cargo.toml
@@ -23,3 +23,5 @@ tokio.workspace = true
 tracing-subscriber.workspace = true
 futures.workspace = true
 semver.workspace = true
+
+nym-mixnet-client = { path = "../nym-mixnet-client" }
