--- a/nym-vpn-app/src-tauri/Cargo.toml
+++ b/nym-vpn-app/src-tauri/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "nym-vpn-app"
-version = "1.1.0-rc.1"
+version = "1.1.1-dev"
 description = "NymVPN desktop client"
 authors = [
     "Nym Technologies SA",
