Add minimalistic bindings for network framework

--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -25,6 +25,8 @@ members = [
     "crates/nym-wg-gateway-client",
     "crates/nym-wg-go",
     "crates/nym-windows",
+    "crates/nym-apple-network",
+    "crates/nym-apple-dispatch",
     "crates/uniffi-bindgen",
 ]
 
