--- a/nym-vpn-core/Makefile
+++ b/nym-vpn-core/Makefile
@@ -44,7 +44,7 @@ fmt-check: ## Check rustfmt
 #  Debian package builds
 # -----------------------------------------------------------------------------
 
-deb: build-deb-vpn-cli build-deb-vpnd build-deb-vpnc
+deb: build-deb-vpn-cli build-deb-vpnd build-deb-vpnc  ## Build debian packages
 
 build-deb-vpn-cli:
 	cargo deb -p nym-vpn-cli
