--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -11,7 +11,8 @@ members = [
     "crates/nym-harbour-master-client",
     "crates/nym-ip-packet-client",
     "crates/nym-mixnet-client",
-    "crates/nym-routing", "crates/nym-tunnel-provider",
+    "crates/nym-routing",
+    "crates/nym-tunnel-provider",
     "crates/nym-vpn-account-controller",
     "crates/nym-vpn-api-client",
     "crates/nym-vpn-cli",
