--- a/nym-vpn-android/app/src/main/AndroidManifest.xml
+++ b/nym-vpn-android/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
 		<activity
 			android:name=".ui.MainActivity"
 			android:exported="true"
-			android:theme="@style/Theme.NymVPN.Starting"
+			android:theme="@style/Theme.NymVPN"
 			android:screenOrientation="portrait"
 			android:windowSoftInputMode="adjustResize"
 			android:configChanges="orientation|screenSize|keyboardHidden|locale"
