--- a/nym-vpn-android/gradle/libs.versions.toml
+++ b/nym-vpn-android/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanist = "0.36.0"
-agp = "8.7.3"
+agp = "8.8.0-rc01"
 coreSplashscreen = "1.2.0-alpha02"
 detektRulesCompose = "1.4.0"
 ipaddress = "5.5.1"
