--- a/.github/workflows/build-nym-vpn-core-android.yml
+++ b/.github/workflows/build-nym-vpn-core-android.yml
@@ -22,7 +22,7 @@ jobs:
 
   build-android:
     needs: build-wireguard-go-android
-    runs-on: arc-ubuntu-22.04
+    runs-on: ubuntu-latest
     outputs:
       UPLOAD_DIR_ANDROID: ${{ env.UPLOAD_DIR_ANDROID }}
       RUST_VERSION: ${{ steps.rust-version.outputs.rustc }}
