--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -125,7 +125,7 @@ tower = "0.4.13"
 tower-http = { version = "0.5.2", features = ["cors"] }
 tracing = "0.1"
 tracing-appender = "0.2.3"
-tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 tun = { version = "0.6.1", features = ["async"] }
 uniffi = { version = "0.27.3", features = ["cli"] }
 url = "2.5"
