Add default-members entry in nym-vpn-core workspace
Add default-members to the `nym-vpn-core` workspace since usually people
only want to build the main binaries, and not bother with e.g
`nym-gateway-probe`.

Adding only `nym-vpnd` and `nym-vpnc`, but transitively most crates will
be built still.

--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -27,6 +27,11 @@ members = [
     "crates/uniffi-bindgen",
 ]
 
+default-members = [
+    "crates/nym-vpnd",
+    "crates/nym-vpnc",
+]
+
 # For local development
 # [patch."https://github.com/nymtech/nym"]
 # nym-authenticator-requests = { path = "../../nym/common/authenticator-requests" }
