--- a/.github/workflows/ci-nym-vpn-core-macos.yml
+++ b/.github/workflows/ci-nym-vpn-core-macos.yml
@@ -53,14 +53,14 @@ jobs:
       - name: rustfmt check
         working-directory: nym-vpn-core
         run: |
-          cargo fmt --check
+          cargo fmt --check --all
 
       - name: Run tests
         working-directory: nym-vpn-core
         run: |
-          cargo test --verbose
+          cargo test --verbose --workspace
 
       - name: Clippy
         working-directory: nym-vpn-core
         run: |
-          cargo clippy -- -Dwarnings
+          cargo clippy --workspace -- -Dwarnings
