--- a/.github/workflows/ci-nym-vpn-core-android.yml
+++ b/.github/workflows/ci-nym-vpn-core-android.yml
@@ -63,7 +63,7 @@ jobs:
       - name: rustfmt check
         working-directory: nym-vpn-core
         run: |
-          cargo fmt --check
+          cargo fmt --check --all
 
       - name: Build
         working-directory: nym-vpn-core
