--- a/nym-vpn-core/Makefile
+++ b/nym-vpn-core/Makefile
@@ -15,14 +15,20 @@ all: help
 #  Build targets
 # -----------------------------------------------------------------------------
 
-build: ## Build the Rust workspace
+build: ## Build the default crates in the Rust workspace
 	cargo build
 
-build-release: ## Build the Rust workspace in release mode
+build-all: ## Build all crates in the Rust workspace
+	cargo build --workspace
+
+build-release: ## Build the default crates in the Rust workspace in release mode
 	cargo build --release
 
+build-release-all: ## Build all the crates in the Rust workspace in release mode
+	cargo build --release --workspace
+
 build-mac: ## Build the Rust workspace suitable for running the daemon
-	RUSTFLAGS="-C link-arg=-all_load -C link-arg=-ObjC -C link-arg=-sectcreate -C link-arg=__TEXT -C link-arg=__info_plist -C link-arg=$(CURDIR)/../nym-vpn-apple/Daemon/Info.plist -C link-arg=-sectcreate -C link-arg=__TEXT -C link-arg=__launchd_plist -C link-arg=$(CURDIR)/../nym-vpn-apple/Daemon/Launchd.plist" cargo build --release --workspace --exclude nym-gateway-probe
+	RUSTFLAGS="-C link-arg=-all_load -C link-arg=-ObjC -C link-arg=-sectcreate -C link-arg=__TEXT -C link-arg=__info_plist -C link-arg=$(CURDIR)/../nym-vpn-apple/Daemon/Info.plist -C link-arg=-sectcreate -C link-arg=__TEXT -C link-arg=__launchd_plist -C link-arg=$(CURDIR)/../nym-vpn-apple/Daemon/Launchd.plist" cargo build --release
 
 build-win-cross:
 	cargo build --target x86_64-pc-windows-gnu --release
