--- a/.github/workflows/build-nym-vpn-app-linux.yml
+++ b/.github/workflows/build-nym-vpn-app-linux.yml
@@ -37,7 +37,7 @@ env:
 
 jobs:
   build-linux:
-    runs-on: arc-ubuntu-22.04
+    runs-on: ubuntu-latest
     outputs:
       UPLOAD_DIR_LINUX: ${{ env.UPLOAD_DIR_LINUX }}
       PKG_VERSION: ${{ steps.package-version.outputs.metadata }}
