--- a/.github/workflows/generate-build-info-nym-vpn-app.yml
+++ b/.github/workflows/generate-build-info-nym-vpn-app.yml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   generate-build-info-nym-vpn-app:
-    runs-on: arc-ubuntu-22.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
