--- a/.github/workflows/publish-nym-vpn-app.yml
+++ b/.github/workflows/publish-nym-vpn-app.yml
@@ -51,7 +51,7 @@ jobs:
       - build-nym-vpn-app-linux
       - build-nym-vpn-app-windows
       - generate-build-info-nym-vpn-app
-    runs-on: arc-ubuntu-22.04
+    runs-on: ubuntu-latest
     outputs:
       tag: ${{ steps.set_tag.outputs.tag }}
     env:
