--- a/.github/workflows/ci-nym-vpn-android.yml
+++ b/.github/workflows/ci-nym-vpn-android.yml
@@ -29,8 +29,8 @@ jobs:
           java-version: '17'
           cache: gradle
 
-      - name: Install unzip
-        run: sudo apt-get update && sudo apt-get install -y unzip
+      - name: Install deps
+        run: sudo apt-get update && sudo apt-get install -y unzip rsync
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v3
