Improve android build (#1791)
* Disable docker by default

* Remove superficial comments

* Remove unused variables

* Restore strip tool for android

* Print goroot and gopath

* Patch go runtime for android

* Stop passing arguments to build_android and build_ios

* Build wireguard-go with proper flag on android

* Set ANDROID_PACKAGE_NAME if not provided

* Add -trimpath to go build

* Update readme

* ci: add rsync for wireguard-go builds

* ci: install rsync for android app builds

* Make sure build-libs.sh exits immediately on error

* Move build output from android/app/build to nym-vpn-android/app/build

* Use pushd to scope calls

--- a/.github/workflows/ci-nym-vpn-core-android.yml
+++ b/.github/workflows/ci-nym-vpn-core-android.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       - name: Install system dependencies
-        run: sudo apt-get update && sudo apt-get install -y libdbus-1-dev libmnl-dev libnftnl-dev protobuf-compiler git curl gcc g++ make unzip
+        run: sudo apt-get update && sudo apt-get install -y libdbus-1-dev libmnl-dev libnftnl-dev protobuf-compiler git curl gcc g++ make unzip rsync
 
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -58,7 +58,7 @@ jobs:
           repo-token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build wireguard
-        run: ./wireguard/libwg/build-android.sh
+        run: ./wireguard/build-wireguard-go.sh --android
 
       - name: rustfmt check
         working-directory: nym-vpn-core
@@ -68,7 +68,7 @@ jobs:
       - name: Build
         working-directory: nym-vpn-core
         run: |
-          cargo ndk  -t aarch64-linux-android -o ./build build -p nym-vpn-lib
+          cargo ndk -t aarch64-linux-android -o ./build build -p nym-vpn-lib
 
       - name: Clippy
         working-directory: nym-vpn-core
