Use 2024.15-reeses on develop

--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -136,27 +136,27 @@ windows-sys = "0.52"
 x25519-dalek = "2.0"
 zeroize = "1.6.0"
 
-nym-authenticator-requests = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-bandwidth-controller = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-bin-common = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-client-core = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-compact-ecash = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-config = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-contracts-common = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-credential-proxy-requests = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-credential-storage = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-credentials = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-credentials-interface = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-crypto = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-ecash-time = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-http-api-client = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-ip-packet-requests = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-node-requests = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-pemstore = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-service-provider-requests-common = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-sdk = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-statistics-common = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-task = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-topology = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-validator-client = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
-nym-wireguard-types = { git = "https://github.com/nymtech/nym", branch = "release/2024.14-crunch" }
+nym-authenticator-requests = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-bandwidth-controller = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-bin-common = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-client-core = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-compact-ecash = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-config = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-contracts-common = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-credential-proxy-requests = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-credential-storage = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-credentials = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-credentials-interface = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-crypto = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-ecash-time = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-http-api-client = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-ip-packet-requests = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-node-requests = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-pemstore = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-service-provider-requests-common = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-sdk = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-statistics-common = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-task = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-topology = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-validator-client = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
+nym-wireguard-types = { git = "https://github.com/nymtech/nym", branch = "release/2024.15-reeses" }
