--- a/nym-vpn-core/crates/nym-dbus/Cargo.toml
+++ b/nym-vpn-core/crates/nym-dbus/Cargo.toml
@@ -4,6 +4,7 @@ authors.workspace = true
 repository.workspace = true
 license.workspace = true
 edition.workspace = true
+version = "1.2.0-dev"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 dbus = { workspace = true }
