--- a/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
@@ -77,6 +77,7 @@ nym-vpn-network-config = { path = "../nym-vpn-network-config" }
 nym-vpn-store = { path = "../nym-vpn-store" }
 nym-wg-gateway-client = { path = "../nym-wg-gateway-client" }
 nym-wg-go = { path = "../nym-wg-go" }
+nym-apple-network = { path = "../nym-apple-network" }
 
 [target.'cfg(unix)'.dependencies]
 nix = { workspace = true, features = ["socket", "net", "fs"] }
@@ -99,6 +100,10 @@ rand.workspace = true
 
 [target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
 oslog = "0.2.0"
+
+[target.'cfg(target_os = "ios")'.dependencies]
+dispatch2.workspace = true
+debounced = "0.2"
 
 [build-dependencies]
 uniffi = { workspace = true, features = ["build"] }
