--- a/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpn-lib/Cargo.toml
@@ -78,6 +78,7 @@ nym-vpn-store = { path = "../nym-vpn-store" }
 nym-wg-gateway-client = { path = "../nym-wg-gateway-client" }
 nym-wg-go = { path = "../nym-wg-go" }
 nym-apple-network = { path = "../nym-apple-network" }
+nym-apple-dispatch = { path = "../nym-apple-dispatch" }
 
 [target.'cfg(unix)'.dependencies]
 nix = { workspace = true, features = ["socket", "net", "fs"] }
@@ -102,7 +103,6 @@ rand.workspace = true
 oslog = "0.2.0"
 
 [target.'cfg(target_os = "ios")'.dependencies]
-dispatch2.workspace = true
 debounced = "0.2"
 
 [build-dependencies]
