--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -26,6 +26,7 @@ members = [
     "crates/nym-wg-go",
     "crates/nym-windows",
     "crates/nym-apple-network",
+    "crates/nym-apple-dispatch",
     "crates/uniffi-bindgen",
 ]
 
@@ -72,7 +73,6 @@ edition = "2021"
 license = "GPL-3.0-only"
 
 [workspace.dependencies]
-dispatch2 = { path = "/Users/pronebird/Nym/objc2/crates/dispatch2" }
 anyhow = "1.0.94"
 async-trait = "0.1.83"
 backon = "1.3"
