--- a/nym-vpn-core/crates/nym-routing/Cargo.toml
+++ b/nym-vpn-core/crates/nym-routing/Cargo.toml
@@ -24,16 +24,16 @@ nym-common = { path = "../nym-common" }
 
 [target.'cfg(target_os = "linux")'.dependencies]
 libc.workspace = true
-netlink-packet-route = { version = "0.13", features = ["rich_nlas"] }
-netlink-sys = "0.8.3"
-rtnetlink = "0.11"
+netlink-packet-route = { version = "0.19", features = ["rich_nlas"] }
+netlink-packet-core = { version = "0.7" }
+netlink-sys = "0.8"
+rtnetlink = "0.14"
 
 [target.'cfg(target_os = "macos")'.dependencies]
 bitflags = "2"
 libc.workspace = true
-nix = { version = "0.28", features = ["socket", "fs", "net"] }
+nix = { workspace = true, features = ["socket", "fs", "net"] }
 system-configuration.workspace = true
-
 
 [target.'cfg(windows)'.dependencies]
 nym-windows = { path = "../nym-windows" }
