--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -80,6 +80,7 @@ base64 = "0.22"
 base64-url = "3.0.0"
 bincode = "1.3.3"
 bip39 = "2.1"
+block2 = "0.5"
 bs58 = "0.5.1"
 bytes = "1.9"
 chrono = "0.4.39"
@@ -99,6 +100,8 @@ log = "0.4.22"
 maplit = "1.0.2"
 netdev = "0.29.0"
 nix = "0.29"
+objc2 = "0.5"
+objc2-foundation = "0.2"
 parity-tokio-ipc = "0.9.0"
 parking_lot = "0.12"
 pnet_packet = "0.35.0"
