--- a/nym-vpn-core/crates/nym-apple-network/Cargo.toml
+++ b/nym-vpn-core/crates/nym-apple-network/Cargo.toml
@@ -9,9 +9,9 @@ edition.workspace = true
 license.workspace = true
 
 [target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
-objc2-foundation = { version = "0.2", features = ["NSString"] }
-block2 = { version = "0.5" }
-objc2 = { version = "0.5", features = ["unstable-apple-new"] }
+objc2-foundation = { workspace = true, features = ["NSString"] }
+block2.workspace = true
+objc2.workspace = true
 nix = { workspace = true, features = ["socket", "net"] }
 thiserror.workspace = true
 
