--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -81,6 +81,7 @@ base64-url = "3.0.0"
 bincode = "1.3.3"
 bip39 = "2.1"
 bitflags = "2"
+block2 = "0.5"
 bs58 = "0.5.1"
 bytes = "1.9"
 chrono = "0.4.39"
@@ -103,6 +104,8 @@ netlink-packet-core = "0.7"
 netlink-packet-route = "0.19"
 netlink-sys = "0.8"
 nix = "0.29"
+objc2 = "0.5"
+objc2-foundation = "0.2"
 parity-tokio-ipc = "0.9.0"
 parking_lot = "0.12"
 pnet_packet = "0.35.0"
