--- a/nym-vpn-core/Cargo.toml
+++ b/nym-vpn-core/Cargo.toml
@@ -78,6 +78,7 @@ base64 = "0.22"
 base64-url = "3.0.0"
 bincode = "1.3.3"
 bip39 = "2.1"
+bitflags = "2"
 bs58 = "0.5.1"
 bytes = "1.9"
 chrono = "0.4.39"
@@ -96,6 +97,9 @@ libc = "0.2"
 log = "0.4.22"
 maplit = "1.0.2"
 netdev = "0.29.0"
+netlink-packet-core = "0.7"
+netlink-packet-route = "0.19"
+netlink-sys = "0.8"
 nix = "0.29"
 parity-tokio-ipc = "0.9.0"
 parking_lot = "0.12"
@@ -105,6 +109,7 @@ prost-types = "0.12.6"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 reqwest = { version = "0.11.27", default-features = false }
+rtnetlink = "0.14"
 rust2go = "0.3.16"
 semver = "1.0.23"
 serde = "1.0"
@@ -138,6 +143,7 @@ uniffi = { version = "0.27.3", features = ["cli"] }
 url = "2.5"
 uuid = "1.11"
 vergen = { version = "8.3.1", default-features = false }
+widestring = "1.0"
 windows-sys = "0.52"
 x25519-dalek = "2.0"
 zeroize = "1.6.0"
