--- a/.github/workflows/build-nym-vpn-core-mac.yml
+++ b/.github/workflows/build-nym-vpn-core-mac.yml
@@ -75,7 +75,7 @@ jobs:
         env:
           RUSTFLAGS: "-L ${{ env.WG_GO_LIB_PATH }}"
         run: |
-          cargo build --${{ env.CARGO_TARGET }} --target x86_64-apple-darwin --workspace --exclude nym-gateway-probe
+          cargo build --${{ env.CARGO_TARGET }} --target x86_64-apple-darwin
           cargo build -p nym-gateway-probe --${{ env.CARGO_TARGET }}
           ls -la target/x86_64-apple-darwin/release/ || true
 
