Use workspace version for nym-dbus and nym-windows

--- a/nym-vpn-core/crates/nym-dbus/Cargo.toml
+++ b/nym-vpn-core/crates/nym-dbus/Cargo.toml
@@ -4,6 +4,7 @@ authors.workspace = true
 repository.workspace = true
 license.workspace = true
 edition.workspace = true
+version.workspace = true
 
 [target.'cfg(target_os = "linux")'.dependencies]
 dbus = { workspace = true }
