--- a/nym-vpn-core/crates/nym-windows/Cargo.toml
+++ b/nym-vpn-core/crates/nym-windows/Cargo.toml
@@ -4,6 +4,7 @@ authors.workspace = true
 repository.workspace = true
 license.workspace = true
 edition.workspace = true
+version.workspace = true
 
 [target.'cfg(windows)'.dependencies]
 thiserror = { workspace = true }
