--- a/nym-vpn-core/crates/nym-vpnc/Cargo.toml
+++ b/nym-vpn-core/crates/nym-vpnc/Cargo.toml
@@ -39,6 +39,11 @@ vergen = { workspace = true, default-features = false, features = [
     "cargo",
 ] }
 
+[target.'cfg(windows)'.dependencies]
+windows-service = "0.7.0"
+eventlog = "0.3.0"
+winapi = { version = "0.3", features = ["winnt", "excpt", "winerror"] }
+
 # Debian
 [package.metadata.deb]
 name = "nym-vpnc"
